syntax = "proto3";

package secretpb;

option go_package = "cetinboran/secretpb";  

service SecretService {
  rpc GetSecret (SecretRequest) returns (SecretResponse);
}

message SecretRequest {}

message SecretResponse {
  string data = 1;
}
